@@ -62,8 +62,7 @@ class Config(object):
         rst_prologue = (None, 'env'),
         trim_doctest_flags = (True, 'env'),
         needs_sphinx = (None, None),
-        secnumber_suffix = ('. ', 'html'),
-        
+
         # HTML options
         html_theme = ('default', 'html'),
         html_theme_path = ([], 'html'),
@@ -96,6 +95,7 @@ class Config(object):
         html_context = ({}, 'html'),
         html_output_encoding = ('utf-8', 'html'),
         html_compact_lists = (True, 'html'),
+        html_secnumber_suffix = ('. ', 'html'),
 
         # HTML help only options
         htmlhelp_basename = (lambda self: make_filename(self.project), None),
